# codee_bitcode

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml  tests.yml
src/binary/: bincode.rs  bincode_serde.rs  mod.rs  rkyv.rs
