[package]
name = "codee"
version = "0.3.1"
edition = "2021"
authors = ["Marc-Stefan Cassola"]
categories = ["encoding"]
description = "Easy and flexible way of encoding and decoding data into either strings or bytes"
exclude = ["examples/", "tests/"]
keywords = ["codec", "utilities", "serialization", "deserialization"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Synphonyte/codee"

[dependencies]
base64 = { version = "0.22", optional = true }
js-sys = { version = "0.3", optional = true }
miniserde = { version = "0.1", optional = true }
prost = { version = "0.13", optional = true }
rkyv = { version = "0.8.9", optional = true }
rmp-serde = { version = "1.1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde-lite = { version = "0.5", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
thiserror = "2.0"
wasm-bindgen = { version = "0.2", optional = true }

# Optional bincode v1 for bincode_serde feature
bincode_v1 = { package = "bincode", version = "1", optional = true }

# Optional bincode v2 for bincode feature
bincode = { package = "bincode", version = "2.0.1", optional = true }

[features]
prost = ["dep:prost"]
json_serde = ["dep:serde_json", "dep:serde"]
msgpack_serde = ["dep:rmp-serde", "dep:serde"]
bincode = ["dep:bincode"]
bincode_serde = ["dep:bincode_v1", "dep:serde"]
serde_lite = ["dep:serde-lite"]
json_serde_wasm = ["dep:serde", "dep:serde_json", "dep:js-sys", "dep:serde-wasm-bindgen", "dep:wasm-bindgen"]


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde-lite = { version = "0.5", features = ["derive"] }
leptos = "0.7"
leptos-use = "0.15"

[package.metadata.docs.rs]
all-features = true